# SUSTech-EE351-Microprocessors-and-Microsystems-Project

./: CMakeLists.txt  README.md
inc/: common_devices.h  ctp.h  gpio.h  i2c.h  lcd.h  led_matrix.h  pwm.h  spi.h
scripts/test/: spi_test.py  tp_test.py
src/: ctp.cpp  gpio.cpp  i2c.cpp  lcd.cpp  led_matrix.cpp  main.cpp  pwm.cpp  spi.cpp
ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
ui/components/: ui_comp_hook.c
ui/images/: ui_img_arrow_down_png.c  ui_img_arrow_left_png.c  ui_img_arrow_right_png.c  ui_img_arrow_up_png.c  ui_img_bkg_png.c  ui_img_btn_pad_bottom_png.c  ui_img_btn_pad_top_png.c  ui_img_btn_print_down_png.c  ui_img_btn_print_top_off_png.c  ui_img_cloud_png.c  ui_img_icn_stop_png.c  ui_img_icn_time_1_png.c  ui_img_icn_time_2_png.c  ui_img_phone_png.c  ui_img_weather_1_png.c  ui_img_weather_2_png.c  ui_img_weather_3_png.c
ui/screens/: ui_Alarm.c  ui_Call.c  ui_Date.c  ui_Home.c  ui_Light.c  ui_Music_Player.c  ui_Settings.c  ui_Todo.c  ui_Weather.c
